--- a/EntregaFinal(Heladeria)Coria/styles.css
+++ b/EntregaFinal(Heladeria)Coria/styles.css
@@ -10,14 +10,14 @@ body {
   .navbar {
     display: flex;
     justify-content: space-between;
-    height: 12vh;
-    background-color: #1b1b1b;
+    height: 10vh;
+    background-color: #00b3b9;
   }
   
   .navbar-logo {
     justify-self: start;
     margin-left: 20px;
-    color: #fff;
+    color: #000000;
     margin-top: 4vh;
     cursor: pointer;
   }
@@ -45,7 +45,7 @@ body {
   
   .banner h1 {
     margin: 0;
-    color: white;
+    color: rgb(0, 202, 224);
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     font-size: 62px;
     font-weight: bold;
@@ -53,7 +53,7 @@ body {
   
   .banner p {
     font-size: 30px;
-    color: white;
+    color: rgb(0, 202, 224);
     opacity: 0.7;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   }
@@ -68,8 +68,9 @@ body {
     margin-right: 60px;
   }
   .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
+    background-color: #d98600;
+    box-shadow: 0 4px 8px 0 rgb(45, 34, 6);
+    width: 300px;
     margin: auto;
     text-align: center;
     font-family: arial;
@@ -79,10 +80,11 @@ body {
   .card > img {
     width: 90%;
     height: 250px;
+    
   }
   
   .price {
-    color: grey;
+    color: rgb(0, 0, 0);
     font-size: 22px;
   }
   
@@ -90,8 +92,8 @@ body {
     border: none;
     outline: 0;
     padding: 12px;
-    color: white;
-    background-color: #000;
+    color: rgb(201, 118, 17);
+    background-color: #3a2100;
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -107,8 +109,8 @@ body {
     width: 80%;
     margin: 0 10%;
     max-height: 88vh;
-    color: #fff;
-    background-color: #121212;
+    color: #fffb00;
+    background-color: #513d11;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,8 +128,8 @@ body {
   .modal-header {
     display: flex;
     justify-content: space-around;
-    background-color: #0a0909;
-    color: #fff;
+    background-color: #261c00;
+    color: #ffdd01;
     width: 100%;
   }
   
@@ -188,8 +190,8 @@ body {
   
   /*CarritoCounter*/
   .cantidad-carrito {
-    background-color: red;
-    color: white;
+    background-color: rgb(255, 208, 0);
+    color: rgb(80, 46, 5);
     border-radius: 50%;
     font-size: 12px;
     padding: 4px;
